--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,11 @@ jobs:
     strategy:
       matrix:
         php_version: 
-          - 7.1
-          - 7.2
-          - 7.3
+        - '7.0'
+        - '7.1'
+        - '7.2'
+        - '7.3'
+        - '7.4.0beta2'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
