--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - master
   schedule:
-    - cron:  0 0 * * *
+    - cron:  0 0 * * 1
 
 jobs:
   build:
@@ -16,6 +16,7 @@ jobs:
         - '7.2'
         - '7.3'
         - '7.4'
+        - '8.0-rc'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
